--- a/index.html
+++ b/index.html
@@ -2,12 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/images/showgrid-logo.svg" />
+
+    <!-- Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Visualize TV series episode ratings at a glance. Interactive heatmaps show which episodes are fan favorites and which ones missed the mark." />
+    <meta name="author" content="ShowGrid" />
+    <meta name="keywords" content="TV series, episode ratings, heatmap, TMDb, visualizer, television, shows" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://showgrid.app/" />
+    <meta property="og:title" content="ShowGrid - Visualize TV Series Ratings" />
+    <meta property="og:description" content="Discover episode ratings at a glance with interactive heatmaps. See which episodes are fan favorites and which ones missed the mark." />
+    <meta property="og:image" content="/images/showgrid-logo.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://showgrid.app/" />
+    <meta property="twitter:title" content="ShowGrid - Visualize TV Series Ratings" />
+    <meta property="twitter:description" content="Discover episode ratings at a glance with interactive heatmaps. See which episodes are fan favorites and which ones missed the mark." />
+    <meta property="twitter:image" content="/images/showgrid-logo.svg" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-    <title>ShowGrid</title>
+
+    <title>ShowGrid - Visualize TV Series Ratings at a Glance</title>
   </head>
   <body>
     <div id="root"></div>
