fixed twitter card

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <meta property="og:url" content="https://showgrid.app/" />
     <meta property="og:title" content="ShowGrid - Visualize TV Series Ratings" />
     <meta property="og:description" content="Discover episode ratings at a glance with interactive heatmaps. See which episodes are fan favorites and which ones missed the mark." />
-    <meta property="og:image" content="/images/showgrid-logo.svg" />
+    <meta property="og:image" content="/images/tmdb-logo.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://showgrid.app/" />
     <meta property="twitter:title" content="ShowGrid - Visualize TV Series Ratings" />
     <meta property="twitter:description" content="Discover episode ratings at a glance with interactive heatmaps. See which episodes are fan favorites and which ones missed the mark." />
-    <meta property="twitter:image" content="/images/showgrid-logo.svg" />
+    <meta property="twitter:image" content="/images/tmdb-logo.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
